<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="30dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/permanent_marker"
            android:gravity="center_horizontal"

            android:text="@string/about_title"
            android:textColor="@color/black"
            android:textSize="@dimen/default_titleSize"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:layout_marginBottom="30dp"
            android:justificationMode="inter_word"
            android:lineSpacingMultiplier="1.5"/>

        <TextView
            android:id="@+id/about_linkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorLink="@color/black"
            android:text="@string/about_link"
            android:layout_marginBottom="60dp"/>

        <Button
            android:id="@+id/about_backBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/default_buttonWidth"
            android:layout_height="wrap_content"

            android:background="@drawable/button_shape"
            android:text="@string/about_backBtnText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>