<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/add_titleText"

            android:textSize="@dimen/default_titleSize"
            android:fontFamily="@font/permanent_marker"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/explanationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_explanationText"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/textInput"
            android:layout_width="@dimen/view_textBoxWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/add_inputHint"
            android:inputType="text"
            android:autofillHints="@string/add_inputHint"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/maven_pro"
            />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="@dimen/default_buttonWidth"
                android:layout_height="wrap_content"
                android:text="@string/add_cancelButtonText"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="@dimen/view_buttonMargin"
                android:layout_marginStart="@dimen/view_buttonMargin"

                android:background="@drawable/button_shape_grey"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/addBtn"
                android:layout_width="@dimen/default_buttonWidth"
                android:layout_height="wrap_content"
                android:text="@string/add_addButtonText"
                android:layout_marginRight="@dimen/view_buttonMargin"
                android:layout_marginEnd="@dimen/view_buttonMargin"

                android:background="@drawable/button_shape"
                style="?android:attr/borderlessButtonStyle" />

        </LinearLayout>

</LinearLayout>