<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/info_titleText"

            android:textSize="@dimen/default_titleSize"
            android:fontFamily="@font/permanent_marker"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_textDescription"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:layout_gravity=""/>

            <TextView
                android:id="@+id/locationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/backBtn"
            android:layout_width="@dimen/default_buttonWidth"
            android:layout_height="wrap_content"
            android:text="@string/info_backButtonText"

            android:layout_marginTop="25dp"
            android:layout_gravity="center"

            android:background="@drawable/button_shape"
            style="?android:attr/borderlessButtonStyle"
            />

    </LinearLayout>


</LinearLayout>